--- a/src/view/FullscreenView.fxml
+++ b/src/view/FullscreenView.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -61,7 +60,7 @@
                     </padding>
                     <children>
                         <Button fx:id="fullscreenExitButton" text="Exit Fullscreen" onAction="#handleExitFullscreenToggle" styleClass="fullscreen-button"/>
-                        <ToggleButton fx:id="fullscreenThemeToggleButton" text="Dark Mode" onAction="#handleFullscreenThemeToggle" styleClass="fullscreen-button"/>
+                        <Button fx:id="fullscreenThemeButton" text="Dark Mode" onAction="#handleFullscreenThemeToggle" styleClass="fullscreen-button"/>
 
                         <Region HBox.hgrow="ALWAYS"/>
 
