--- a/src/view/NormalView.fxml
+++ b/src/view/NormalView.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -118,9 +117,8 @@
                 </HBox>
                 <HBox alignment="CENTER" spacing="15.0" styleClass="control-button-bar">
                     <children>
-                        <!-- Changed ToggleButton to Button for fullscreen -->
                         <Button fx:id="fullscreenToggleButton" mnemonicParsing="false" onAction="#handleFullscreenToggle" text="Toggle Fullscreen" />
-                        <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" onAction="#handleThemeToggle" text="Dark Mode" />
+                        <Button fx:id="themeButton" mnemonicParsing="false" onAction="#handleThemeToggle" text="Dark Mode" />
 
                         <Region HBox.hgrow="ALWAYS" />
 
